Add: new changes

--- a/frontend/Kreacion_app/public/index.html
+++ b/frontend/Kreacion_app/public/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://assets.maccarianagency.com/screenshots/the-front/social.png"
+      content="../."
     />
     <meta
       property="og:title"
