--- a/frontend/Kreacion_app/public/index.html
+++ b/frontend/Kreacion_app/public/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="../."
+      content="public/Kreacion.svg"
     />
     <meta
       property="og:title"
@@ -30,7 +30,7 @@
       property="og:description"
       content="A modern Fashion media and marketing App."
     />
-    <meta property="og:url" content="https://thefront.maccarianagency.com/" />
+    <meta property="og:url" content="src/views/mobile-app" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
     <title>
