--- a/frontend/Kreacion_app/public/index.html
+++ b/frontend/Kreacion_app/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
@@ -18,24 +18,19 @@
     />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="public/Kreacion.svg"
-    />
-    <meta
-      property="og:title"
-      content="Kreacion | World's #1 Fashion App."
-    />
+    <meta property="og:image" content="./Kreacion.svg" />
+    <meta property="og:title" content="Kreacion | World's #1 Fashion App." />
     <meta
       property="og:description"
       content="A modern Fashion media and marketing App."
     />
     <meta property="og:url" content="src/views/mobile-app" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-    <title>
-      Kreacion | World's #1 Fashion App.
-    </title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <title>Kreacion | World's #1 Fashion App.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
